Write content - Move content (#3768)
* Write-content API (WIP)

* oldPath parameter to support 'update and rename' operations

* Revert "oldPath parameter to support 'update and rename' operations"

This reverts commit 0a9447fe255124cf623eaa6636b25cd1454a0233.

* Add write-content reponse

* Remove unused ExtractMetadataApi and extract.groovy scripts

* write-content API param updates

* write-content API param updates

* write-content API responses updates

* write-content API param updates

* write-content API spec tweaks

* write-content API spec tweaks

* Write Content API (WIP)

* Remove user parameter from persistItemAfter- methods

* Separate git repository writeContent and createFolder from blobstore versions

* Write Content API (WIP)

* Add config properties for applicationContext and list of beans to be available in content lifecycle scripts

* Code cleanup

* Supporting write Document in content lifecycle

* Support reading 'in-flight' content as Document. Create missing folders on write-content

* Support for asset processing pipeline

* Reorganize write content related methods

* Write-content asset upload. API spec tweaks. Handle no-changes write scenario

* Check permissions after content lifecycle. Sort paths to ensure parents are persisted first

* Remove unused parameter 'commitId'

* Improve path sorting when writing content

* Tweaks to persist item on content write

* Lifecycle controller tweaks

* Update page nav order on content-write

* Rename -lifeCycle- variables and classes for consistency

* Cleanup temporary files after write-content

* Fix typo

* write-content related unit tests

* Static method imports and cleanup

* Error handling and stream handling updates

* Add logging on controller script loading

* Write content to return 201 for new content

* Separate git from non git related moveContent() in ContentRepository interfaces

* V2 content move operation (WIP)

* V2 content move operation (WIP)

* V2 content move operation

* V2 